--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <main>
         <h1>Calorie Counter</h1>
         <div class="container">
-            <form>
+            <form id="calorie-counter">
                 <label for="budget">Budget</label>
                 <input id="budget" type="number" min="0" placeholder="Dailey calorie budget" required>
 
@@ -42,12 +42,28 @@
         <div class="controls">
             <span>
                 <label for="entry-dropdown">Add food or exercise:</label>
-                <select name="options" id="entry-dropdown"></select>
+                <select name="options" id="entry-dropdown">
+                    <option value="breakfast" selected="breakfast">Breakfast</option>
+                    <option value="lunch">Lunch</option>
+                    <option value="dinner">Dinner</option>
+                    <option value="snacks">Snacks</option>
+                    <option value="exercise">Exercise</option>
+                </select>
                 <button id="add-entry">Add Entry</button>
                 
             </span>
         </div>
+        <div>
+            <button type="submit">Calculate Remaining Calories</button>
+            <button type="button" id="clear">Clear</button>
+        </div>
+        <div id="ouput" class="ouput hide">
+
+        </div>
     </main>
+
+
+    <script src="script.js"></script>
 </body>
 
 </html>
